# test2

./: .gitignore  README.md  pyproject.toml
experiment-reports/Milvus_performance/: surrmay.md
experiment-reports/acs-parameters/: summary.md
experiment-reports/cognitive-search/reranker-threshold/: analysis.ipynb  plots.html  plots.ipynb  reranker-threshold-analysis.md
experiment-reports/external-reranker-impact-on-acs/: reranker-experiment.md
experiment-reports/gpt35/: gpt35-experiment.md
experiment-reports/html-text-splitter-impact/: .sample.env  experiments_configs.txt  html-text-splitter-impact-sample.json  html-text-splitter-impact.md
experiment-reports/prompt-engineering/: prompt-impact-on-acs.md  user-story-110025-basic-prompt-engineering.md
experiment-reports/source_analysis/: analysis_3770_ccmk.ipynb  get_chunks_src.ipynb  readme.md
src/cckm_snowflake_ingest/: .env.sample  README.md  main.py
src/cckm_snowflake_ingest/config/: snowflake_config.py
src/cckm_snowflake_ingest/services/: file_manager.py  snowflake_client.py
src/data/domain_configs/: trial_config.json  {domain}-{config-version}.json
src/evaluation_framework/: README.md  eval_exp_with_gpt.py  run_exp.ipynb  run_experiment.py
src/evaluation_framework/config/: config.py  sample.env
src/evaluation_framework/evaluation/: evaluator.py  metrics.py
src/evaluation_framework/services/: Dashboard.xlsx  container_client.py  domain_config_manager.py  domain_services_request_manager.py  experiment_data_manager.py
tests/services/: test_container_client.py  test_experiment_data_manager.py
(+12 files in other folders)
